Completed hamburger menu anchor and sub anchor functionalities and implemented font awesome icons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="AWOR">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    
+    <!-- Font Awesome  -->
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <title>AWOR</title>
   </head>
   <body>
